--- a/templates/pages/current-exhibition.html
+++ b/templates/pages/current-exhibition.html
@@ -38,7 +38,7 @@
   <div class="col-xl-6 gallery">
     <div class="wrap-gallery-article">
       <div id="myCarouselArticle" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
+        <!-- <ol class="carousel-indicators">
           <li
             data-target="#myCarouselArticle"
             data-slide-to="0"
@@ -57,7 +57,7 @@
           <li data-target="#myCarouselArticle" data-slide-to="11"></li>
           <li data-target="#myCarouselArticle" data-slide-to="12"></li>
           <li data-target="#myCarouselArticle" data-slide-to="13"></li>
-        </ol>
+        </ol> -->
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active">
             <img
@@ -66,8 +66,8 @@
               alt="Harrogate Court looking east toward Sydenham Hill"
               title="Harrogate Court looking east toward Sydenham Hill"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <p>Harrogate Court looking east toward Sydenham Hill</p>
+            <div class="carousel-caption">
+              <p>1. Harrogate Court looking east toward Sydenham Hill</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -77,8 +77,8 @@
               alt="Corner of Sydenham Hill and Crescent Wood Road"
               title="Corner of Sydenham Hill and Crescent Wood Road"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <p>Corner of Sydenham Hill and Crescent Wood Road</p>
+            <div class="carousel-caption">
+              <p>2. Corner of Sydenham Hill and Crescent Wood Road</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -88,8 +88,8 @@
               alt="Crescent Wood Road at the entrance to Sydenham Hill Wood"
               title="Crescent Wood Road at the entrance to Sydenham Hill Wood"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <p>Crescent Wood Road at the entrance to Sydenham Hill Wood</p>
+            <div class="carousel-caption ">
+              <p>3. Crescent Wood Road at the entrance to Sydenham Hill Wood</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -99,8 +99,8 @@
               alt="Junction of Crescent Wood Road and Peckarmans Wood"
               title="Junction of Crescent Wood Road and Peckarmans Wood"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <p>Junction of Crescent Wood Road and Peckarmans Wood</p>
+            <div class="carousel-caption ">
+              <p>4. Junction of Crescent Wood Road and Peckarmans Wood</p>
             </div>
           </div>
 
@@ -111,8 +111,8 @@
               alt="East corner of Peckarmans Wood looking west"
               title="East corner of Peckarmans Wood looking west"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <p>East corner of Peckarmans Wood looking west</p>
+            <div class="carousel-caption ">
+              <p>5. East corner of Peckarmans Wood looking west</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -122,9 +122,9 @@
               alt="East end of Peckarmans Wood looking toward Crescent Wood Road"
               title="East end of Peckarmans Wood looking toward Crescent Wood Road"
             />
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption ">
               <p>
-                East end of Peckarmans Wood looking toward Crescent Wood Road
+                6. East end of Peckarmans Wood looking toward Crescent Wood Road
               </p>
             </div>
           </div>
@@ -135,8 +135,8 @@
               alt="Looking west along Peckermans Wood"
               title="Looking west along Peckermans Wood"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <p>Looking west along Peckermans Wood</p>
+            <div class="carousel-caption ">
+              <p>7 .Looking west along Peckermans Wood</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -146,8 +146,8 @@
               alt="Crescent Wood Road looking east toward Sydenham Hill"
               title="Crescent Wood Road looking east toward Sydenham Hill"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <p>Crescent Wood Road looking east toward Sydenham Hill</p>
+            <div class="carousel-caption ">
+              <p>8. Crescent Wood Road looking east toward Sydenham Hill</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -157,8 +157,8 @@
               alt="Crescent Wood Road at Six Pillars"
               title="Crescent Wood Road at Six Pillars"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <p>Crescent Wood Road at Six Pillars</p>
+            <div class="carousel-caption ">
+              <p>9. Crescent Wood Road at Six Pillars</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -168,8 +168,8 @@
               alt="West end of Peckarmans Wood looking northwest"
               title="West end of Peckarmans Wood looking northwest"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <p>West end of Peckarmans Wood looking northwest</p>
+            <div class="carousel-caption ">
+              <p>10. West end of Peckarmans Wood looking northwest</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -179,8 +179,8 @@
               alt="West end of Peckarmans Wood looking west"
               title="West end of Peckarmans Wood looking west"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <p>West end of Peckarmans Wood looking west</p>
+            <div class="carousel-caption ">
+              <p>11. West end of Peckarmans Wood looking west</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -190,8 +190,8 @@
               alt="West end of Peckarmans Wood looking east"
               title="West end of Peckarmans Wood looking east"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <p>West end of Peckarmans Wood looking east</p>
+            <div class="carousel-caption ">
+              <p>12. West end of Peckarmans Wood looking east</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -201,8 +201,8 @@
               alt="Crescent Wood Road at Six Pillars looking east"
               title="Crescent Wood Road at Six Pillars looking east"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <p>Crescent Wood Road at Six Pillars looking east</p>
+            <div class="carousel-caption ">
+              <p>13. Crescent Wood Road at Six Pillars looking east</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -212,16 +212,16 @@
               alt="Crescent Wood Road looking down the path to Sydenham Hill station"
               title="Crescent Wood Road looking down the path to Sydenham Hill station"
             />
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption ">
               <p>
-                Crescent Wood Road looking down the path to Sydenham Hill
+                14. Crescent Wood Road looking down the path to Sydenham Hill
                 station
               </p>
             </div>
           </div>
         </div>
         <a
-          class="carousel-control-prev"
+          class="carousel-control-prev d-sm-block d-md-none"
           href="#myCarouselArticle"
           role="button"
           data-slide="prev"
@@ -230,7 +230,7 @@
           <span class="sr-only">Previous</span>
         </a>
         <a
-          class="carousel-control-next"
+          class="carousel-control-next d-sm-block d-md-none"
           href="#myCarouselArticle"
           role="button"
           data-slide="next"
@@ -239,16 +239,12 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-      <div
-        id="container"
-        class="row d-none d-md-block green-line"
-        id="slider-thumbs"
-      >
+      <button id="toggleCarousel" class="d-none d-md-block">
+        <i class="fa fa-pause"></i>
+      </button>
+      <div class="d-none d-md-block small-images-container" id="slider-thumbs">
         <!-- Bottom switcher of slider -->
-        <ul
-          id="lijst-curr-exh"
-          class="reset-ul d-flex flex-wrap list-thumb-gallery"
-        >
+        <ul id="lijst-curr-exh" class="reset-ul">
           <li class="element element-exh">
             <a
               class="thumbnail"
