--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -2440,13 +2440,7 @@ button:focus {
   font-weight: bold;
 }
 
-.carousel-caption p {
-  text-transform: uppercase;
-  font-weight: bold;
-}
-
 #lijst-curr-exh {
-  min-width: 2450px;
   padding: 0px;
   margin-top: 10px;
 }
@@ -2466,41 +2460,71 @@ button:focus {
 .wrap-gallery-article {
   margin: 40px;
   overflow: hidden;
+  position: relative;
 }
 
 .wrap-gallery-article #container {
-  width: 620px;
+  width: auto;
 }
 
 .element-exh {
-  padding: 0;
-  padding-right: 3px;
+  padding: 1.5px;
   margin: 0;
 }
 
-/* width */
-.wrap-gallery-article ::-webkit-scrollbar {
-  width: 20px;
+.img-element {
+  height: 25px;
+  width: 41.65px;
 }
+
+.carousel-caption {
+  position: unset !important;
+  padding: 0;
+  padding-top: 10px;
+}
+
+.carousel-caption p {
+  color: black;
+  margin-bottom: 0;
+}
+
+button#toggleCarousel {
+  padding: 6px !important;
+  font-size: 10px !important;
+  position: absolute;
+  bottom: 45px;
+}
+
+@media screen and (min-width: 767px) {
+  .small-images-container {
+    display: table !important;
+    margin: 0 auto;
+  }
+}
+
+.carousel-control-next,
+.carousel-control-prev {
+  bottom: 25% !important;
+}
+
+/* width */
+/* .wrap-gallery-article ::-webkit-scrollbar {
+  width: 20px;
+} */
 
 /* Track */
-.wrap-gallery-article ::-webkit-scrollbar-track {
+/* .wrap-gallery-article ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
   border-radius: 10px;
-}
+} */
 
 /* Handle */
-.wrap-gallery-article ::-webkit-scrollbar-thumb {
+/* .wrap-gallery-article ::-webkit-scrollbar-thumb {
   background: #66cc00;
   border-radius: 10px;
-}
+} */
 
 /* Handle on hover */
-.wrap-gallery-article ::-webkit-scrollbar-thumb:hover {
+/* .wrap-gallery-article ::-webkit-scrollbar-thumb:hover {
   background: #4c9007;
-}
-
-.img-element {
-  height: 100px;
-  width: 170px;
-}
+} */
