Add News and Make Welcome Editable

--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -306,6 +306,7 @@ a:hover {
 }
 .site-navbar .site-navigation .site-menu {
   margin-bottom: 0;
+  padding: 0;
 }
 .site-navbar .site-navigation .site-menu .active > a {
   color: blue;
@@ -1693,6 +1694,10 @@ a:hover {
 
 .active9 a {
   color: #66cc00 !important;
+}
+
+.active10 a {
+  color: #00a4a7 !important;
 }
 
 .orange-title {
