Remove News Title

--- a/templates/news/index.html
+++ b/templates/news/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="col-md-6 mb-3 col-work">
         <div class="body">
-          <h5 class="work-title green-title text-center">{{ new.title }}</h5>
+          <!-- <h5 class="work-title green-title text-center">{{ new.title }}</h5> -->
           <p class="card-text">{{ new.description | safe }}</p>
         </div>
       </div>
