Update copyright and fix game page bug

--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -2,7 +2,7 @@
   <div class="footer py-1">
     <div class="container-fluid">
       <p>
-        &copy; Just Virtual 2019
+        Copyright &copy; 2021. Designed by <a href="https://www.klicksdesign.com/" class="active">Klicks Design</a>.
       </p>
     </div>
   </div>
