--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -2516,6 +2516,10 @@ button#toggleCarousel {
   bottom: 25% !important;
 }
 
+iframe {
+  max-width: 100%;
+}
+
 /* width */
 /* .wrap-gallery-article ::-webkit-scrollbar {
   width: 20px;
